--- a/css/bodyStyle.css
+++ b/css/bodyStyle.css
@@ -57,11 +57,24 @@ input {
   border: none;
   border-radius: 15px;
   padding: 15px;
+  font-size: xx-large;
+  color: peachpuff;
+  margin-right: 20px;
+  margin-bottom: 50px;
+  box-shadow: 15px 15px 15px rgba(35, 0, 0, 0.6);
+}
+textarea{
+  margin-top: 25px;
+  background-color: rgba(35, 0, 0, 0.8);;
+  border: none;
+  border-radius: 15px;
+  padding: 15px;
   font-size: x-large;
   color: peachpuff;
   margin-right: 20px;
   box-shadow: 15px 15px 15px rgba(35, 0, 0, 0.6);
 }
+
 label {
   width: 500px;
   height: 50px;
