--- a/css/bodyStyle.css
+++ b/css/bodyStyle.css
@@ -200,6 +200,14 @@ tr:last-child{
     top: -550px;
     height: fit-content;
   }
+  #membro{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
   
   
 }
