--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -14,7 +14,7 @@ body{
     display: flex;
     flex-direction: column;
     background-color: rgb(35, 0, 0);
-    background-image: url('../img/tavernawide.jpg');
+    background-image: url('../img/FotoTochas.jpg');
     background-size:cover;
     top: 50px;
     background-position: top;
